--- a/core/Piranha.Manager/assets/less/forms.less
+++ b/core/Piranha.Manager/assets/less/forms.less
@@ -294,7 +294,7 @@
 		padding: 15px;
 		margin-top: -65px;
 		white-space: nowrap;
-		z-index: 20000;		
+		z-index: 1800;		
 	}	
 
 	.dropdown-menu {
